name:                recipe-repo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Samangan/recipe-repository
license:             BSD3
license-file:        LICENSE
author:              Harry Hull
maintainer:          harry.hull1@gmail.com
copyright:           2017 Harry Hull
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable recipe-repo
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Routes
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , time
                     , aeson >= 1.0
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , resourcet >= 1.1
                     , monad-logger
